View Issue Details

IDProjectCategoryView StatusLast Update
0025662Open CASCADEOCCT:Modeling Algorithmspublic2015-05-14 15:33
ReporteramlAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025662: Project command produce wrong 2dcurve
DescriptionProject command produce bad 2dcurve.

Poles section:
...
  30 : 0.99999990628703, 36.9999893233908
  31 : 0.999999906383891, 36.9999899497489
  32 : 0.999999906001904, 36.999994863756
  33 : 0.99999990624201, 36.9999896287918
  34 : 0.999999906001904, 36.9999999681022
  35 : 0.999999906369339, 36.9999942005379
  36 : 0.999999906289304, 36.9999997522245
  37 : 0.999999906303546, 37
  38 : 0.999999906303267, 0.562500447442957
  39 : 0.999999906304161, 1.12500188141214
  40 : 0.999999906303174, 1.68750125869413
...
Steps To Reproducerestore c3d
restore surf
project c2d c3d surf

dump c2d:

1) should give sequential set of points on "y" coord in poles section, i.e. Pole(i+1).Y() > Pole(i).Y()
2) "y" coord of first pole should be 36.9997986855584.
3) "y" coord of last pole should be 55.0007653583147.
TagsNo tags attached.
Test case numberbugs moddata_3(013) bug25662

Attached Files

  • s (2,928 bytes)
  • c3d (1,029 bytes)

Activities

git

2014-12-26 11:31

administrator   ~0035744

Branch CR25662 has been created by aml.

SHA-1: 9bad92910e0fdf573699aef288933ad98ab25a4c


No new revisions were added by this update.

aml

2014-12-26 11:35

developer   ~0035745

Dear abv,
Please check current state of CR25662.

Dear bugmaster,
please delete CR25562 branch, which created by mistake.

abv

2014-12-26 12:30

manager   ~0035747

No remarks, please test

git

2014-12-26 17:07

administrator   ~0035771

Branch CR25662 has been updated forcibly by mkv.

SHA-1: 9271ce71d770b84a8ef753bbc2d89486783315c4

aml

2015-01-15 14:20

developer  

s (2,928 bytes)

aml

2015-01-15 14:20

developer  

c3d (1,029 bytes)

mkv

2015-01-15 15:04

tester   ~0036107

Dear BugMaster,
Branch CR25662 was rebased on current master of occt git-repository.

mkv

2015-01-15 15:04

tester   ~0036108

Dear BugMaster,
Branch CR25662 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: 9271ce71d770b84a8ef753bbc2d89486783315c4

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 1 (1 on master)

Regressions/Differences:
No regressions/differences

Testing cases:
http://occt-tests/CR25662-master-occt/Debian60-64/bugs/moddata_3/bug25662.html
http://occt-tests/CR25662-master-occt/Windows-32-VC10/bugs/moddata_3/bug25662.html
bugs moddata_3(013) bug25662: OK

Testing on Linux:
occt component :
Total MEMORY difference: 369150064 / 369132708
Total CPU difference: 51081.31999999986 / 46134.12000000006
products component :
Total MEMORY difference: 110147648 / 109631572
Total CPU difference: 17308.499999999967 / 15261.529999999993

Testing on Windows:
occt component :
Total MEMORY difference: 276563000 / 276918412
Total CPU difference: 37854.140625 / 38326.15625
products component :
Total MEMORY difference: 72560008 / 71429320
Total CPU difference: 15323.59375 / 10071.46875

There are no differences in images found by testdiff.

git

2015-01-15 15:05

administrator   ~0036109

Branch CR25662 has been updated by mkv.

SHA-1: 419d30977c4107823a2b5ff76aafbc154a5103a2


Detailed log of new commits:

Author: mkv
Date: Thu Jan 15 14:56:21 2015 +0300

    Test case for issue CR25662

git

2015-01-26 12:32

administrator   ~0036520

Branch CR25662 has been deleted by inv.

SHA-1: 419d30977c4107823a2b5ff76aafbc154a5103a2

Related Changesets

occt: master 460f4f69

2015-01-15 12:40:25

aml


Committer: bugmaster Details Diff
0025662: Project command produce wrong 2dcurve

Concatenation algorithm fixed to work over periodic bspline surfaces.

Test case for issue CR25662
Affected Issues
0025662
mod - src/ProjLib/ProjLib_ComputeApproxOnPolarSurface.cxx Diff File
add - tests/bugs/moddata_3/bug25662 Diff File

Issue History

Date Modified Username Field Change
2014-12-26 11:24 aml New Issue
2014-12-26 11:24 aml Assigned To => msv
2014-12-26 11:24 aml Assigned To msv => aml
2014-12-26 11:31 git Note Added: 0035744
2014-12-26 11:35 aml Note Added: 0035745
2014-12-26 11:35 aml Assigned To aml => abv
2014-12-26 11:35 aml Status new => resolved
2014-12-26 12:30 abv Note Added: 0035747
2014-12-26 12:30 abv Assigned To abv => bugmaster
2014-12-26 12:30 abv Status resolved => reviewed
2014-12-26 16:40 mkv Assigned To bugmaster => mkv
2014-12-26 17:07 git Note Added: 0035771
2015-01-15 14:20 aml File Added: s
2015-01-15 14:20 aml File Added: c3d
2015-01-15 15:04 mkv Note Added: 0036107
2015-01-15 15:04 mkv Note Added: 0036108
2015-01-15 15:04 mkv Assigned To mkv => bugmaster
2015-01-15 15:04 mkv Status reviewed => tested
2015-01-15 15:05 git Note Added: 0036109
2015-01-15 15:05 mkv Test case number => bugs moddata_3(013) bug25662
2015-01-16 13:37 bugmaster Changeset attached => occt master 460f4f69
2015-01-16 13:37 bugmaster Status tested => verified
2015-01-16 13:37 bugmaster Resolution open => fixed
2015-01-26 12:32 git Note Added: 0036520
2015-05-14 15:29 aiv Status verified => closed
2015-05-14 15:33 aiv Fixed in Version => 6.9.0